--- a/client/src/views/formPage/FormPage.module.css
+++ b/client/src/views/formPage/FormPage.module.css
@@ -1,82 +1,98 @@
-.contenedor{
-    width: 100vw;
-    height: 90vh;
+@import url("https://fonts.googleapos.com/css2?family=Poppins:weght@300;400;500;600;700;800;900&display=swamp");
+.cont{
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    width: 420px;
+    margin-top: 3%;
+    margin-left: 9%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url("https://i.ebayimg.com/images/g/IIMAAOSwG3tevXF3/s-l1200.webp");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100vw;
-    background-position: center;
-    
+    align-items: flex-start;
 }
-
-
-.form{
-    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.9) 35%, rgba(255, 255, 0, 0.9));
-    width: 24%;
-    height: auto;
-    padding: 1%;
+.divform{
+    min-width: 420px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: #fff;
     border-radius: 10px;
-    box-shadow: 8px 5px 10px rgb(0, 0, 0,0.9);
-    border: 1.5px solid black;
-}
-.label{
-    display: block;
-    color: black;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.1rem;
-    
+    padding: 20px 30px;
 }
 .info{
-    width: 95%;
-    border-radius: 6px;
-    border: 0;
-    height: 3.5vb;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    text-align: center;
+    width: 100%;
+    height: 25px;
+    margin: 10px 0;
 }
-.divbutton{
-    display: flex;
-    justify-content: center;
-    margin-top: 1.5%;
+.divform input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 2px 4.5px 2px 2px;
 }
-
-.span{
-    color: rgb(49, 21, 21);
-    font-weight: bold;
+input::placeholder{
+    color: #000;
 }
-
+.divTeams {
+    width: 100%;
+}
+.divform select{
+    outline: none;
+    border: none;
+    border-radius: 25px;
+    text-align: center;
+    width: 100%;
+    height: 35px;
+    margin: 15px 0;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+}
+.divbutton button{
+    width: 100%;
+    height: 30px;
+    margin: 15px 0;
+    border: none;
+    outline: none;
+    border-radius: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
 .divTeams{
-    display: block;
-    width: auto;
-    height: auto;
-    max-width: 50%;
-    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.9) 35%, rgba(255, 255, 0, 0.9));
-    padding: 1%;
+    min-width: 420px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: #fff;
+    margin-left: 50px;
     border-radius: 10px;
-    box-shadow: 8px 5px 10px rgb(0, 0, 0,0.9);
-    border: 1.5px solid black;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
 }
-
-.divTeams h2{
-    color: black;
-}
-
 .team{
-    border: 1px solid black;
-    border-radius: 15px;
-    margin-bottom: 5%;
     display: flex;
-    justify-content: end;
+    align-items: center;
 }
-
 .divTeams button{
-    width: 1%;
-    height: 1%;
+    background-color: transparent;
+    font-size: 18px;
+    border: none;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+}
+.team button:hover{
+    cursor: pointer;
+    border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-
 }
