--- a/client/src/views/home/Home.module.css
+++ b/client/src/views/home/Home.module.css
@@ -1,9 +1,5 @@
-.home{
-    width: 100%;
-    height: 100vh;
-}
 .contSearch{
-    background-color: rgba(253, 0, 0,0.9);
+    background-color: rgba(255, 255, 255, .4);
     display: flex;
     height: 55px;
     justify-content: space-between;
@@ -21,7 +17,6 @@
     position: absolute;
     width: 100vw;;
     height: 100vh;
-    background-image: url("https://www.f1latam.com/img/prin/partbah242.webp");
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 50px;
