--- a/client/src/views/landing/Landing.module.css
+++ b/client/src/views/landing/Landing.module.css
@@ -1,23 +1,34 @@
-.contenedorbase{
-    width: 100vw;
-    height: 100%;
+body{
+    background-image: url(https://images4.alphacoders.com/134/1347332.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.contenedorimg{
-    width: 100%;
+.container{
+    background-color: rgba(255, 255, 255, .2);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 }
-.image{
-    width: 75%;
-    height: 20%;
-    margin-top: 0;
+.title{
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
-.divbutton{
-    width: 100vw;
-    height: 50px;
-    display: flex;
-    justify-content: center;
+.button button{
+    background-color: rgba(255, 255, 255, .1);
+    border: 0;
+    border-radius: 12px;
+    margin: 0;
+    padding: 25px;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.button{
-    width: 100%;
+.button button:hover{
+    cursor: pointer;
+    background-color: rgb(0, 0, 0);
+    color: rgb(100, 180, 190);
 }
