--- a/client/src/views/landing/Landing.module.css
+++ b/client/src/views/landing/Landing.module.css
@@ -1,18 +1,19 @@
+@import url("https://fonts.googleapos.com/css2?family=Poppins:weght@300;400;500;600;700;800;900&display=swamp");
 body{
     background-image: url(https://images4.alphacoders.com/134/1347332.png);
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: "Poppins", sans-serif;
 }
 .container{
     background-color: rgba(255, 255, 255, .2);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 .title{
     color: rgb(255, 255, 255);
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: 0;
     margin: 0;
     padding: 0;
@@ -25,7 +26,6 @@ body{
     padding: 25px;
     color: rgb(255, 255, 255);
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .button button:hover{
     cursor: pointer;
