--- a/client/src/components/cards/Cards.module.css
+++ b/client/src/components/cards/Cards.module.css
@@ -1,7 +1,9 @@
 .cards{
-    width: 100vw;
+    width: 90%;
+    margin-left: 5.5%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -20,6 +22,5 @@
 }
 
 .paginate{
-    width: 100vw;
-    
+    width: 100%;
 }
