--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -1,26 +1,33 @@
 .search{
-    width: 35%;
     margin-right: 3%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+}
+.button{
+    background-color: transparent;
+    border: none;
+    border: 2px solid rgba(0, 0, 0, .5);
+    border-radius: 12px;
+}
+.searchbar{
+    background-color: #fff;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    width: 250px;
+    display: flex;
+    justify-content: space-around;
 }
 .input{
-    width: 100%;
-    height: 25px;
-    border-radius: 6px 6px 6px 6px;
-    margin: 5px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    border: none;
+    outline: none;
 }
 .searchbutton{
-    height: 80%;
-    width: 35%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    background-color: transparent;
+    border: 0;
 }
-
-.button{
-    width: 100%;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+.searchbutton img{
+    background-color: transparent;
+    height: 17px;
+    padding-top: 2px;
 }
