--- a/client/src/views/home/Home.module.css
+++ b/client/src/views/home/Home.module.css
@@ -1,25 +1,28 @@
+.home{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
 .contSearch{
     background-color: rgba(255, 255, 255, .4);
+    background-color: black;
+    width: 100%;
+    height: 12%;
     display: flex;
-    height: 55px;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    width: 100%;
+    position: absolute;
     z-index: 1;
 }
 .filters{
+    background-color: white;
     margin-left: 2%;
+    display: flex;
 }
 .cards{
     width: 100%;
-    padding-top: 4%;
-    position: absolute;
-    width: 100vw;;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding-bottom: 50px;
+    margin-top: 10%;
 }
 
 .selects{
