--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -2,7 +2,7 @@
     width: 12%;
     height: fit-content;
     background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
     padding: 1%;
     margin: 1%;
@@ -22,9 +22,10 @@
     min-height: 180px;
 }
 .name{
-    text-align: center;
     font-weight: bold;
     color: #fff;
+    display: flex;
+    justify-content: center;
 }
 .card:hover{
     scale: 1.2;
