--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -1,5 +1,5 @@
 .search{
-    margin-right: 3%;
+    margin-right: 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,9 +9,11 @@
     border: none;
     border: 2px solid rgba(0, 0, 0, .5);
     border-radius: 12px;
+    width: 125px;
+    height: 25px;
 }
 .searchbar{
-    background-color: #fff;
+    background-color: transparent;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 15px;
     width: 250px;
@@ -19,6 +21,7 @@
     justify-content: space-around;
 }
 .input{
+    background-color: transparent;
     border: none;
     outline: none;
 }
