--- a/client/src/views/home/Home.module.css
+++ b/client/src/views/home/Home.module.css
@@ -6,7 +6,6 @@
 }
 .contSearch{
     background-color: rgba(255, 255, 255, .4);
-    background-color: black;
     width: 100%;
     height: 12%;
     display: flex;
@@ -16,17 +15,23 @@
     z-index: 1;
 }
 .filters{
-    background-color: white;
+    background-color: transparent;
     margin-left: 2%;
     display: flex;
 }
+.filters select{
+    background-color: transparent;
+    border-radius: 12px;
+    border: 2px solid rgba(0, 0, 0, .5);
+    text-align: center;
+    outline: none;
+    min-width: 40%;
+    border-radius: 15px;
+}
+.searchbar{
+    width: 30%;
+}
 .cards{
     width: 100%;
-    margin-top: 10%;
-}
-
-.selects{
-    min-width: 40%;
-    border-radius: 5px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 7.5%;
 }
