--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -1,33 +1,33 @@
-.card{
-    width: 12%;
-    height: fit-content;
-    background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    padding: 1%;
-    margin: 1%;
-    border-radius: 7.5%;
+.card {
+    background: transparent;
+    margin: 40px 20px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 250px;
+    height: 350px;
 }
-.divimage{
-    width: 100%;
-    height: 70%;
+
+.card:hover {
+    background: rgba(255, 255, 255, .3);
+    box-shadow: 0 0 20px white;
+}
+
+.linkCard {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-large;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
-.img{
-    width: 100%;
-    height: 100%;
-    min-width: 100%;
-    max-height: 180px;
-    min-height: 180px;
+
+.img {
+    width: 95%;
+    height: 300px;
 }
-.name{
-    font-weight: bold;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-}
-.card:hover{
-    scale: 1.2;
-    cursor: pointer;
+
+.name {
+    color: white;
+    margin-top: 20px;
 }
