--- a/client/src/views/formPage/FormPage.module.css
+++ b/client/src/views/formPage/FormPage.module.css
@@ -1,98 +1,49 @@
-@import url("https://fonts.googleapos.com/css2?family=Poppins:weght@300;400;500;600;700;800;900&display=swamp");
-.cont{
-    font-family: "Poppins", sans-serif;
+.form {
+    height: 700px;
+    width: 500px;
+    margin: 20px auto;
+    border: 1px solid white;
+    border-radius: 15px;
+    padding: 30px;
     text-align: center;
-    width: 420px;
-    margin-top: 3%;
-    margin-left: 9%;
-    display: flex;
-    align-items: flex-start;
 }
-.divform{
-    min-width: 420px;
-    background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color: #fff;
-    border-radius: 10px;
-    padding: 20px 30px;
+
+.title {
+    border-bottom: 1px solid white;
 }
-.info{
-    text-align: center;
-    width: 100%;
-    height: 25px;
-    margin: 10px 0;
-}
-.divform input{
-    width: 100%;
-    height: 100%;
+
+.info {
     background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
-    padding: 2px 4.5px 2px 2px;
-}
-input::placeholder{
-    color: #000;
-}
-.divTeams {
+    color: white;
     width: 100%;
-}
-.divform select{
-    outline: none;
-    border: none;
-    border-radius: 25px;
     text-align: center;
-    width: 100%;
-    height: 35px;
-    margin: 15px 0;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-}
-.divbutton button{
-    width: 100%;
-    height: 30px;
-    margin: 15px 0;
-    border: none;
+    margin: 17px auto;
+    border: 1px solid transparent;
     outline: none;
-    border-radius: 25px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    padding: 5px;
+}
+
+.info:hover {
     cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 600;
 }
-.divTeams{
-    min-width: 420px;
-    background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color: #fff;
-    margin-left: 50px;
-    border-radius: 10px;
-    padding: 20px 30px;
-    display: flex;
-    flex-direction: column;
+
+.info:focus {
+    background: white;
+    color: black;
 }
-.team{
-    display: flex;
-    align-items: center;
+
+.submitButton {
+    background: transparent;
+    color: white;
+    width: 100%;
+    margin: 20px auto;
+    border: 1px solid transparent;
+    padding: 10px;
+    text-transform: uppercase;
 }
-.divTeams button{
-    background-color: transparent;
-    font-size: 18px;
-    border: none;
-    width: 50px;
-    height: 50px;
-    padding: 0;
-}
-.team button:hover{
+
+.submitButton:hover {
     cursor: pointer;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 50%;
+    background: white;
+    color: black;
 }
