--- a/client/src/views/landing/Landing.module.css
+++ b/client/src/views/landing/Landing.module.css
@@ -1,36 +1,35 @@
-@import url("https://fonts.googleapos.com/css2?family=Poppins:weght@300;400;500;600;700;800;900&display=swamp");
-body{
-    background-image: url(https://images4.alphacoders.com/134/1347332.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: "Poppins", sans-serif;
-    margin: 0;
-    padding: 0;
-}
-.container{
-    background-color: rgba(255, 255, 255, .2);
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Faster+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&family=Sixtyfour+Convergence&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+.container {
+    width: 100%;
+    height: 70vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.title{
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    border: 0;
-    margin: 0;
-    padding: 0;
+
+.title {
+    font-family: "Faster One", system-ui;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
 }
-.button button{
-    background-color: rgba(255, 255, 255, .1);
-    border: 0;
-    border-radius: 12px;
-    margin: 0;
-    padding: 25px;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-}
-.button button:hover{
+
+.button {
+    text-decoration: none;
+    font-family: system-ui;
+    font-size: 32px;
+    color: white;
     cursor: pointer;
-    background-color: rgb(0, 0, 0);
-    color: rgb(100, 180, 190);
+    padding: 10px;
+    border-radius: 10px;
+    border: 4px solid transparent;
+}
+
+.button:hover {
+    background: rgba(255, 255, 255, .3);
+    border-bottom: 4px solid white;
+    border-left: 4px solid white;
+    border-top: 4px solid black;
+    border-right: 4px solid black;;
 }
