--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -1,44 +1,20 @@
 .container {
-    background: rgba(255, 255, 255, .5);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background: linear-gradient(black, transparent);
+    position: fixed;
+    z-index: 3;
     width: 100%;
-    height: 10vh;
-}
-
-.media {
-    width: 25%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.contact {
-    width: 30px;
-    height: 30px;
-}
-
-.nav {
-    width: 50%;
+    height: 60px;
+    border-bottom: 2px  solid white;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .link {
+    cursor: pointer;
     color: white;
-    border-radius: 5px;
-    padding: 5px;
     text-decoration: none;
-    font-size: 22px;
-}
-
-.link:hover {
-    background: white;
-    color: black;
-}
-
-.searchbar {
-    width: 25%;
+    font-size: 24px;
+    padding: 0 25px;
 }
