--- a/client/src/views/landing/Landing.module.css
+++ b/client/src/views/landing/Landing.module.css
@@ -1,35 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Faster+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&family=Sixtyfour+Convergence&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 .container {
+    position: relative;
     width: 100%;
-    height: 70vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    height: fit-content;
+    margin: 0;
+    padding: 0;
+}
+
+.info {
+    background: transparent;
+    position: relative;
+    text-align: center;
+    padding: 75px;
+    z-index: 2;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .title {
+    background: transparent;
+    color: red;
     font-family: "Faster One", system-ui;
     font-style: normal;
     font-weight: 400;
     font-size: 60px;
-}
-
-.button {
-    text-decoration: none;
-    font-family: system-ui;
-    font-size: 32px;
-    color: white;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 10px;
-    border: 4px solid transparent;
-}
-
-.button:hover {
-    background: rgba(255, 255, 255, .3);
-    border-bottom: 4px solid white;
-    border-left: 4px solid white;
-    border-top: 4px solid black;
-    border-right: 4px solid black;;
+    text-align: center;
+    text-shadow: 7px 7px 10px black;
 }
