--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -11,10 +11,61 @@
     flex-wrap: wrap;
 }
 
+.container:hover {
+    border: transparent;
+}
+
 .link {
     cursor: pointer;
     color: white;
     text-decoration: none;
-    font-size: 24px;
-    padding: 0 25px;
+    font-size: 16px;
+    font-weight: 800;
+    position: relative;
+    border-radius: 5px 5px 0 0;
+    padding: 10px 25px;
+    transition: all .3s ease-in-out;
+}
+
+.link:hover {
+    transform: translateX(1.5rem);
+    background: rgba(255, 66, 66, 0.3);
+}
+
+.link::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: gold;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 1s;
+}
+
+.link:hover::before {
+    transform: scaleX(1);
+}
+
+.mLogo {
+    background: white;
+    width: 20px;
+    height: 20px;
+    margin: 25px;
+    border-radius: 50%;
+}
+
+.mLogo:hover {
+    transition: all 1s;
+    transform: rotateZ(360deg) scale(3,3);
+    filter: drop-shadow(0px 0px 1px red);
+    background: transparent;
+}
+
+.logo {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
