--- a/client/src/views/landing/Landing.module.css
+++ b/client/src/views/landing/Landing.module.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Faster+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&family=Sixtyfour+Convergence&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
 .container {
     position: relative;
     width: 100%;
-    height: fit-content;
+    height: 100vh;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
@@ -33,3 +32,70 @@
     text-align: center;
     text-shadow: 7px 7px 10px black;
 }
+
+.content {
+    background: rgba(0, 0, 0, .5);
+    color: white;
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
+    height: 40vh;
+    width: 100%;
+}
+
+.text {
+    text-align: center;
+    padding: 50px 150px 0 150px;
+}
+
+.listButton {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.itemList {
+    padding: 5px 150px 0px 150px;
+    list-style: none;
+}
+
+.linkBtn {
+    position: relative;
+    display: inline-block;
+    overflow: hidden; /* Asegúrate de que el pseudo-elemento no se desborde */
+    text-decoration: none;
+  }
+  
+  .goBtn {
+    position: relative;
+    z-index: 1; /* Asegura que el botón esté sobre el pseudo-elemento */
+    background: transparent; /* Fondo inicial transparente */
+    color: white; /* Color inicial del texto */
+    border: 2px solid white;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: color 0.3s ease; /* Transición suave para el color del texto */
+  }
+  
+  .linkBtn::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 0%;
+    height: 100%;
+    background: white;
+    z-index: 0; /* Detrás del botón */
+    transform: translate(-50%, -50%);
+    transition: width 0.5s ease;
+  }
+  
+  .linkBtn:hover::before {
+    width: 100%; /* Ancho completo al hacer hover */
+  }
+  
+  .linkBtn:hover .goBtn {
+    color: black; /* Cambia el color del texto a negro al hacer hover */
+  }
+  
