--- a/client/src/components/cards/Cards.module.css
+++ b/client/src/components/cards/Cards.module.css
@@ -1,11 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Contrail+One&family=Faster+One&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Quicksand:wght@300..700&family=SUSE:wght@100..800&family=Sixtyfour+Convergence&family=Sora:wght@100..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 .contenedor {
+    background: white;
     text-align: center;
-    margin-left: 300px;
+}
+
+.title {
+    font-family: "SUSE";
+    font-size: 80px;
+    font-weight: 900;
+    margin: 20px;
+    border-bottom: 15px solid black;
+    border-right: 15px solid black;
+    border-bottom-right-radius: 50px;
 }
 
 .cards {
+    margin: 0;
+    padding: 0px 25px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
