--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -1,14 +1,3 @@
-.container {
-    background: rgba(0, 0, 0, .5);
-    width: 100%;
-    height: 300px;
-    position: absolute;
-}
-.media {
-    display: inline-block;
-}
-
-.contact {
-    width: 30px;
-    height: 30px;
+.contactImage {
+    height: 25px;
 }
