texto centrado en los filtros

--- a/client/src/views/home/Home.module.css
+++ b/client/src/views/home/Home.module.css
@@ -19,6 +19,7 @@
 .selects {
     background: transparent;
     color: white;
+    text-align: center;
     cursor: pointer;
     outline: none;
     border: none;
