--- a/client/src/views/home/Home.module.css
+++ b/client/src/views/home/Home.module.css
@@ -4,19 +4,22 @@
     padding: 0;
     width: 100%;
     min-height: 100vh;
-}
-
-.container {
+  }
+  
+  .container {
     margin: 0;
     padding: 80px 0px;
-}
-
-.filters {
+  }
+  
+  .filters {
     display: flex;
     justify-content: space-evenly;
-}
-
-.selects {
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
+  }
+  
+  .selects {
     background: transparent;
     color: white;
     text-align: center;
@@ -24,32 +27,44 @@
     outline: none;
     border: none;
     padding: 15px;
-    align-self: stretch;
     flex-grow: 1;
     flex-basis: 300px;
-}
-
-.selects::-webkit-scrollbar {
+    min-width: 200px;
+  }
+  
+  .selects::-webkit-scrollbar {
     width: 5px;
-}
-
-.selects::-webkit-scrollbar-track {
+  }
+  
+  .selects::-webkit-scrollbar-track {
     background: red;
-}
-
-.selects::-webkit-scrollbar-thumb {
+  }
+  
+  .selects::-webkit-scrollbar-thumb {
     background-color: gold;
-}
-
-.selects:hover {
+  }
+  
+  .selects:hover {
     background: rgba(255, 0, 0, 0.5);
-    color:  gold;
-}
-
-option {
+    color: gold;
+  }
+  
+  option {
     background: red;
-}
-
-option:hover {
+  }
+  
+  option:hover {
     background: rgba(255, 0, 0, 0.5);
-}
+  }
+  
+  @media screen and (max-width: 768px) {
+    .filters {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .selects {
+      width: 90%;
+      flex-basis: auto;
+    }
+  }
