--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -1,86 +1,112 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Contrail+One&family=Faster+One&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Quicksand:wght@300..700&family=SUSE:wght@100..800&family=Sixtyfour+Convergence&family=Sora:wght@100..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 .card {
-    margin-bottom: 50px;
-    padding-bottom: 125px;
-    width: 350px;
-    height: 400px;
+  margin-bottom: 50px;
+  padding-bottom: 125px;
+  width: 350px;
+  height: 400px;
 }
 
 .linkCard {
-    color: black;
-    font-family: "Audiowide";
-    font-size: 24px;
-    text-decoration: none;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
+  color: black;
+  font-family: "Audiowide";
+  font-size: 24px;
+  text-decoration: none;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
 }
 
 .name {
-    margin-bottom: 50px;
-    border-top: 2px solid black;
-    border-bottom: 1px solid black;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    width: 100%;
+  margin-bottom: 50px;
+  border-top: 2px solid black;
+  border-bottom: 1px solid black;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
 }
 
 .nationality {
-    margin-top: 50px;
-    border-top: 1px solid black;
-    border-bottom: 2px solid black;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    width: 100%;
+  margin-top: 50px;
+  border-top: 1px solid black;
+  border-bottom: 2px solid black;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  width: 100%;
 }
 
 .img {
-    width: 200px;
-    height: 250px;
-    border-radius: 25px;
+  width: 200px;
+  height: 250px;
+  border-radius: 25px;
+  transition: all 0.5s ease-in-out;
 }
 
 .img:hover {
-    transition: all 1s;
-    transform: scale(1.3, 1.3);
+  transform: scale(1.3);
 }
 
 .name,
 .nationality {
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
 }
 
 .data {
-    position: relative;
-    z-index: 1;
-    background: transparent;
-    transition: color 0.3 ease;
+  position: relative;
+  z-index: 1;
+  background: transparent;
+  transition: color 0.3s ease;
 }
 
-.name::before, .nationality::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0%;
-    height: 100%;
-    background: red;
-    z-index: 0;
-    transform: translate(-50%, -50%);
-    transition: width 0.5s ease;
+.name::before,
+.nationality::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0%;
+  height: 100%;
+  background: red;
+  z-index: 0;
+  transform: translate(-50%, -50%);
+  transition: width 0.5s ease;
 }
 
-.name:hover::before, .nationality:hover::before {
-    width: 100%;
+.name:hover::before,
+.nationality:hover::before {
+  width: 100%;
 }
 
-.name:hover .data, .nationality:hover .data {
-    color: white;
-    text-shadow: 0 0 5px gold,
-    0 0 10px gold,
-    0 0 30px gold,
-    0 0 50px gold;
+.name:hover .data,
+.nationality:hover .data {
+  color: white;
+  text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 30px gold, 0 0 50px gold;
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    width: 90%;
+    height: auto;
+    padding-bottom: 50px;
+  }
+
+  .img {
+    width: 80%;
+    height: auto;
+  }
+
+  .linkCard {
+    font-size: 18px;
+  }
+
+  .name,
+  .nationality {
+    font-size: 14px;
+  }
+
+  .img:hover {
+    transform: none;
+  }
 }
