--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -1,3 +1,12 @@
 .contactImage {
     height: 25px;
-}
+    margin: 10px;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .contactImage {
+      height: 20px;
+      margin: 8px;
+    }
+  }
+  
