--- a/client/src/components/video/Video.module.css
+++ b/client/src/components/video/Video.module.css
@@ -1,3 +1,11 @@
 .video {
     width: 100%;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .video {
+        height: 100vh;
+        object-fit: cover;
+    }
 }
